# ZynAddSubFX-Android

./: .gitignore  .gitmodules  NOTICE.md  README.md  TASKS.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/mick/zynaddsubfx/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
app/src/main/java/com/mick/zynaddsubfx/: BankBrowserScreen.kt  EditorScreen.kt  Keyboard.kt  MainActivity.kt  NativeSynthBridge.kt  PlayScreen.kt  SynthEngine.kt  UiControls.kt
app/src/main/java/com/mick/zynaddsubfx/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mick/zynaddsubfx/: ExampleUnitTest.kt
docs/porting/: LICENSE_DISTRIBUTION_NOTES.md  UPSTREAM_FORK_NOTES.md  fft_backend_strategy.md  m0_headless_target.md  m0_inventory.md  m0_risks.md
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt
native/engine_adapter/: ZynAndroidEngine.cpp  ZynAndroidEngine.h  ZynCompatStubs.cpp  ZynUpstreamProbe.cpp  ZynUpstreamProbe.h  fftw3.h  fftw3f_backend_prod_candidate.cpp  fftw3f_shim.cpp
